# imgui_template

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CPPLINT.cfg  build.sh
cmake/patches/nativefiledialog/: CMakeLists.txt
include/: app.h  image_loader.h  logic.h  ui.h  ui_state.h
src/: app.cpp  image_loader.cpp  logic.cpp  main.cpp  ui.cpp
